# POO--F1-Manager

./: CMakeLists.txt  Idei.txt  README.md  main.cpp
headers/: Driver.h
sources/: Driver.cpp
